--- a/privacy.html
+++ b/privacy.html
@@ -242,8 +242,8 @@
                 <p>如有隐私问题、投诉或权利申请，请联系：</p>
                 <ul>
                     <li>邮箱：<a href="mailto:conan200405@gmail.com">conan200405@gmail.com</a></li>
-                    <li>技术支持：<a href="" target="_blank"
-                            rel="noopener"></a></li>
+                    <li>技术支持：<a href="https://deerconan.github.io/golden_green.github.io/support.html" target="_blank"
+                            rel="noopener">https://deerconan.github.io/golden_green.github.io/support.html</a></li>
                     <li>地址：深圳市龙岗区深圳城市职业学院</li>
                 </ul>
                 <p class="footer">若您不同意本政策的任何内容，您应立即停止使用本应用。</p>
