--- a/support.html
+++ b/support.html
@@ -113,7 +113,7 @@
         <p>您可以通过以下方式与我们取得联系：</p>
         <ul>
           <li>邮箱：<a href="mailto:conan200405@gmail.com">conan200405@gmail.com</a></li>
-          <li>隐私政策：<a href="" target="_blank" rel="noopener"></a></li>
+          <li>隐私政策：<a href="https://deerconan.github.io/golden_green.github.io/privacy.html" target="_blank" rel="noopener">https://deerconan.github.io/golden_green.github.io/privacy.html</a></li>
           <li>工单优先通道：使用下方表单提交</li>
         </ul>
 
