--- a/support.html
+++ b/support.html
@@ -1,123 +1,304 @@
 <!doctype html>
 <html lang="zh-CN">
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
-  <title>深智AI课堂 技术支持</title>
-  <meta name="description" content="深智AI课堂技术支持与帮助中心：常见问题、版本更新、反馈与联系。">
-  <style>
-    :root{
-      --bg:#f7fafc;--card:#fff;--text:#1f2937;--muted:#6b7280;--brand:#15c39a;--link:#0a84ff;--border:#e5e7eb;
-    }
-    *{box-sizing:border-box}
-    body{margin:0;background:var(--bg);color:var(--text);font:16px/1.65 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"PingFang SC","Hiragino Sans GB","Microsoft YaHei",Helvetica,Arial,"Noto Sans CJK SC",sans-serif}
-    header{
-      background:linear-gradient(135deg,#15c39a,#39c7b0);
-      color:#fff;padding:54px 18px 36px;text-align:center
-    }
-    header h1{margin:0 0 8px;font-size:28px}
-    header p{margin:0;font-size:14px;opacity:.92}
-    main{max-width:980px;margin:-28px auto 48px;padding:0 16px}
-    .grid{display:grid;grid-template-columns:2fr 1fr;gap:16px}
-    .card{background:var(--card);border:1px solid var(--border);border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.04);padding:20px}
-    h2{font-size:20px;margin:10px 0 12px}
-    h3{font-size:17px;margin:12px 0 6px}
-    p,li{color:var(--text)}
-    .muted{color:var(--muted)}
-    a{color:var(--link);text-decoration:none}
-    a:hover{text-decoration:underline}
-    ul{padding-left:20px}
-    .badge{display:inline-block;background:#e8fbf5;color:#0b8f6f;border:1px solid #bfeee1;padding:2px 8px;border-radius:999px;font-size:12px;margin-left:8px}
-    .cta{display:inline-block;background:var(--brand);color:#fff;border:none;border-radius:10px;padding:10px 14px;font-weight:600}
-    .cta:hover{filter:brightness(0.95)}
-    .kvs{display:grid;grid-template-columns:repeat(2,1fr);gap:10px}
-    .kv{background:#f8fafc;border:1px dashed #dbe2ea;border-radius:10px;padding:10px}
-    .list{margin:0;padding:0;list-style:none}
-    .list li{padding:10px 0;border-bottom:1px solid var(--border)}
-    .list li:last-child{border-bottom:none}
-    details{background:#f9fbfd;border:1px solid var(--border);border-radius:10px;padding:10px;margin:8px 0}
-    summary{cursor:pointer;font-weight:600}
-    .footer{margin-top:18px;font-size:13px;color:var(--muted);text-align:center}
-    @media (max-width:900px){.grid{grid-template-columns:1fr}}
-    @media (max-width:480px){
-      header{padding:42px 14px 28px}
-      header h1{font-size:22px}
-      main{padding:0 12px}
-    }
-    /* Simple feedback form */
-    input,textarea,select{width:100%;padding:10px;border:1px solid var(--border);border-radius:10px;font:inherit}
-    textarea{min-height:120px;resize:vertical}
-    label{font-size:14px;color:#374151;margin:8px 0 6px;display:block}
-    .row{display:grid;grid-template-columns:1fr 1fr;gap:10px}
-    @media (max-width:640px){.row{grid-template-columns:1fr}}
-    .note{font-size:13px;color:var(--muted)}
-    .success{display:none;margin-top:10px;background:#e7f9f1;border:1px solid #b7ecd8;color:#046c54;padding:10px;border-radius:10px}
-  </style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
+    <title>深智AI课堂 技术支持</title>
+    <meta name="description" content="深智AI课堂技术支持与帮助中心：常见问题、版本更新、反馈与联系。">
+    <style>
+        :root {
+            --bg: #f7fafc;
+            --card: #fff;
+            --text: #1f2937;
+            --muted: #6b7280;
+            --brand: #15c39a;
+            --link: #15c39a;
+            --border: #e5e7eb;
+        }
+
+        * {
+            box-sizing: border-box
+        }
+
+        body {
+            margin: 0;
+            background: var(--bg);
+            color: var(--text);
+            font: 16px/1.65 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", Helvetica, Arial, "Noto Sans CJK SC", sans-serif
+        }
+
+        header {
+            background: linear-gradient(135deg, #15c39a, #39c7b0);
+            color: #fff;
+            padding: 54px 18px 36px;
+            text-align: center
+        }
+
+        header h1 {
+            margin: 0 0 8px;
+            font-size: 28px
+        }
+
+        header p {
+            margin: 0;
+            font-size: 14px;
+            opacity: .92
+        }
+
+        main {
+            max-width: 980px;
+            margin: -28px auto 48px;
+            padding: 0 16px
+        }
+
+        .card {
+            background: var(--card);
+            border: 1px solid var(--border);
+            border-radius: 14px;
+            box-shadow: 0 6px 18px rgba(0, 0, 0, .04);
+            padding: 20px
+        }
+
+        h2 {
+            font-size: 20px;
+            margin: 10px 0 12px
+        }
+
+        h3 {
+            font-size: 17px;
+            margin: 12px 0 6px
+        }
+
+        p,
+        li {
+            color: var(--text)
+        }
+
+        .muted {
+            color: var(--muted)
+        }
+
+        a {
+            color: var(--link);
+            text-decoration: none
+        }
+
+        a:hover {
+            text-decoration: underline
+        }
+
+        ul {
+            padding-left: 20px
+        }
+
+        .badge {
+            display: inline-block;
+            background: #e8fbf5;
+            color: #0b8f6f;
+            border: 1px solid #bfeee1;
+            padding: 2px 8px;
+            border-radius: 999px;
+            font-size: 12px;
+            margin-left: 8px
+        }
+
+        .cta {
+            display: inline-block;
+            background: var(--brand);
+            color: #fff;
+            border: none;
+            border-radius: 10px;
+            padding: 10px 14px;
+            font-weight: 600
+        }
+
+        .cta:hover {
+            filter: brightness(0.95)
+        }
+
+        .kvs {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px
+        }
+
+        .kv {
+            background: #f8fafc;
+            border: 1px dashed #dbe2ea;
+            border-radius: 10px;
+            padding: 10px
+        }
+
+        .list {
+            margin: 0;
+            padding: 0;
+            list-style: none
+        }
+
+        .list li {
+            padding: 10px 0;
+            border-bottom: 1px solid var(--border)
+        }
+
+        .list li:last-child {
+            border-bottom: none
+        }
+
+        details {
+            background: #f9fbfd;
+            border: 1px solid var(--border);
+            border-radius: 10px;
+            padding: 10px;
+            margin: 8px 0
+        }
+
+        summary {
+            cursor: pointer;
+            font-weight: 600
+        }
+
+        .footer {
+            margin-top: 18px;
+            font-size: 13px;
+            color: var(--muted);
+            text-align: center
+        }
+
+        @media (max-width:900px) {
+            .grid {
+                grid-template-columns: 1fr
+            }
+        }
+
+        @media (max-width:480px) {
+            header {
+                padding: 42px 14px 28px
+            }
+
+            header h1 {
+                font-size: 22px
+            }
+
+            main {
+                padding: 0 12px
+            }
+        }
+
+        /* Simple feedback form */
+        input,
+        textarea,
+        select {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid var(--border);
+            border-radius: 10px;
+            font: inherit
+        }
+
+        textarea {
+            min-height: 120px;
+            resize: vertical
+        }
+
+        label {
+            font-size: 14px;
+            color: #374151;
+            margin: 8px 0 6px;
+            display: block
+        }
+
+        .row {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px
+        }
+
+        @media (max-width:640px) {
+            .row {
+                grid-template-columns: 1fr
+            }
+        }
+
+        .note {
+            font-size: 13px;
+            color: var(--muted)
+        }
+
+        .success {
+            display: none;
+            margin-top: 10px;
+            background: #e7f9f1;
+            border: 1px solid #b7ecd8;
+            color: #046c54;
+            padding: 10px;
+            border-radius: 10px
+        }
+    </style>
 </head>
+
 <body>
-  <header>
-    <h1>深智AI课堂 技术支持中心</h1>
-    <p>获取帮助、提交问题、查看公告与版本更新</p>
-  </header>
+    <header>
+        <h1>深智AI课堂 技术支持中心</h1>
+        <p>获取帮助、提交问题、查看公告与版本更新</p>
+    </header>
 
-  <main>
-    <div class="grid">
-      <section class="card">
-        <h2>常见问题（FAQ）</h2>
-        <details>
-          <summary>无法登录怎么办？</summary>
-          <p>请检查网络，更新到最新版本，或使用“通过短信验证码登录”。若仍失败，请在下方提交工单并附上错误截图与时间。</p>
-        </details>
-        <details>
-          <summary>如何找回作业/学习数据？</summary>
-          <p>确认是否使用同一账号登录；若更换设备，请先在旧设备完成数据同步。仍有问题，请提供账号、班级与近一次使用时间。</p>
-        </details>
-        <details>
-          <summary>兑换“贝壳”失败或未到账</summary>
-          <p>通常 10 分钟内到账。若超时，请联系班主任处理。保存兑换时间与明细截图。</p>
-        </details>
-        <details>
-          <summary>如何删除账户与个人信息？</summary>
-          <p>退学后班主任会删除您的账号，并删除您的个人信息。</p>
-        </details>
+    <main>
+        <div class="grid">
+            <section class="card">
+                <h2>常见问题（FAQ）</h2>
+                <details>
+                    <summary>无法登录怎么办？</summary>
+                    <p>请检查网络，更新到最新版本，或使用“通过短信验证码登录”。若仍失败，请在下方提交工单并附上错误截图与时间。</p>
+                </details>
+                <details>
+                    <summary>如何找回作业/学习数据？</summary>
+                    <p>确认是否使用同一账号登录；若更换设备，请先在旧设备完成数据同步。仍有问题，请提供账号、班级与近一次使用时间。</p>
+                </details>
+                <details>
+                    <summary>兑换“贝壳”失败或未到账</summary>
+                    <p>通常 10 分钟内到账。若超时，请联系班主任处理。保存兑换时间与明细截图。</p>
+                </details>
+                <details>
+                    <summary>如何删除账户与个人信息？</summary>
+                    <p>退学后班主任会删除您的账号，并删除您的个人信息。</p>
+                </details>
 
-        <h2>公告与维护</h2>
-        <ul class="list">
-          <li><strong>2025-10-24</strong> 发布 v1.0.8 <span class="badge">当前版本</span></li>
-          <li><strong>持续</strong> 9:30 - 18:00 班主任值班</li>
-        </ul>
+                <h2>公告与维护</h2>
+                <ul class="list">
+                    <li><strong>2025-10-24</strong> 发布 v1.0.8 <span class="badge">当前版本</span></li>
+                    <li><strong>持续</strong> 9:30 - 18:00 班主任值班</li>
+                </ul>
 
-        <h2>自助排查</h2>
-        <div class="kvs">
-          <div class="kv">
-            <strong>网络/连接</strong>
-            <p class="muted">切换 Wi‑Fi/移动网络；关闭再开启飞行模式；重启应用。</p>
-          </div>
-          <div class="kv">
-            <strong>存储/缓存</strong>
-            <p class="muted">保留必要数据后清理缓存；确保剩余空间 ≥ 1 GB。</p>
-          </div>
-          <div class="kv">
-            <strong>版本</strong>
-            <p class="muted">前往应用商店更新至最新版本，以获取修复与优化。</p>
-          </div>
-          <div class="kv">
-            <strong>权限</strong>
-            <p class="muted">检查通知、相机/相册（如使用头像与作业拍照）等系统权限。</p>
-          </div>
-        </div>
-      </section>
-
-      <aside class="card">
-        <h2>联系我们</h2>
-        <p>您可以通过以下方式与我们取得联系：</p>
-        <ul>
-          <li>邮箱：<a href="mailto:conan200405@gmail.com">conan200405@gmail.com</a></li>
-          <li>隐私政策：<a href="https://deerconan.github.io/golden_green.github.io/privacy.html" target="_blank" rel="noopener">https://deerconan.github.io/golden_green.github.io/privacy.html</a></li>
-          <li>工单优先通道：使用下方表单提交</li>
-        </ul>
-
-    <p class="footer">© 2025 深智AI课堂 · 技术支持与帮助中心</p>
-  </main>
+                <h2>自助排查</h2>
+                <div class="kvs">
+                    <div class="kv">
+                        <strong>网络/连接</strong>
+                        <p class="muted">切换 Wi‑Fi/移动网络；关闭再开启飞行模式；重启应用。</p>
+                    </div>
+                    <div class="kv">
+                        <strong>存储/缓存</strong>
+                        <p class="muted">保留必要数据后清理缓存；确保剩余空间 ≥ 1 GB。</p>
+                    </div>
+                    <div class="kv">
+                        <strong>版本</strong>
+                        <p class="muted">前往应用商店更新至最新版本，以获取修复与优化。</p>
+                    </div>
+                    <div class="kv">
+                        <strong>权限</strong>
+                        <p class="muted">检查通知、相机/相册（如使用头像与作业拍照）等系统权限。</p>
+                    </div>
+                </div>
+                <h2>联系我们</h2>
+                <p>您可以通过以下方式与我们取得联系：</p>
+                <ul>
+                    <li>邮箱：<a href="mailto:conan200405@gmail.com">conan200405@gmail.com</a></li>
+                    <li>隐私政策：<a href="https://deerconan.github.io/golden_green.github.io/privacy.html" target="_blank"
+                            rel="noopener">https://deerconan.github.io/golden_green.github.io/privacy.html</a></li>
+                </ul>
+                <p class="footer">© 2025 深智AI课堂 · 技术支持与帮助中心</p>
+            </section>
+    </main>
 </body>
+
 </html>
